--- a/desafios/d005-desafio-social/index.html
+++ b/desafios/d005-desafio-social/index.html
@@ -11,11 +11,11 @@
     <h1>Minhas redes sociais</h1>
     <h2>Quem sou eu?</h2>
     <img src="foto-perfil-vitoria-lilian-150.png" alt="Foto Vitória Lilian">
-    <p>Meu nome é <strong>Vitória Lilian</strong>; estou iniciando, em 2023, meus estudos no ramo <br> da programação e desenvolvimento de sites/aplicações. Vou me preparar e <br> estudar muito para que possa buscar uma carreira promissora na área de tecnologia. </p>
+    <p>Meu nome é <strong>Vitória Lilian</strong>. <br> Sou estudante de programação e desenvolvimento de sites/aplicações. <br> HTML, CSS e JavaScript </p>
     <h2>Como falar comigo?</h2>
     <ul>
         <li>
-            <img src="icone-github.png" alt="Ícone github"><a href="https://github.com/lilyv30" target="_blank" rel="external">/lilyv30</a> - Acesse meu repositório público no GitHub
+            <img src="icone-github.png" alt="Ícone github"><a href="https://github.com/vitorialilian" target="_blank" rel="external">/vitorialilian</a> - Acesse meu repositório público no GitHub
         </li>
         <li>
             <img src="icone-instagram.png" alt="Ícone instagram"><a href="https://www.instagram.com/vitorialilian96/?next=%2F" target="_blank" rel="external">/vitorialilian96</a> - Me segue lá no Instagram
