--- a/exercicios/ex022-imagens-de-fundo/fundo006.html
+++ b/exercicios/ex022-imagens-de-fundo/fundo006.html
@@ -4,21 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
             height: 100vh;
-            background-color: black;
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat fixed;
+            background-size: cover;
+            /*background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center center;
-            background-repeat: repeat;
+            background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;*/
+            
         }
 
         main {
             background-color: white;
-            width: 400px;
-            padding: 100px;
+            max-width: 400px;
+            padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
             border-radius: 15px;
