--- a/desafios/d012-desafio-cordel/index.html
+++ b/desafios/d012-desafio-cordel/index.html
@@ -99,7 +99,7 @@
 
     <footer>
         <p>
-            Site criado por <a href="https://gustavoguanabara.github.io/" target="_blank">Gustavo Guanabara</a> e codificado por <a href="https://github.com/vitorialilian" target="_blank">Vitória Lilian</a> para o <a href="https://www.cursoemvideo.com" target="_blank">CursoemVideo</a>
+            Site criado por <a href="https://github.com/vitorialilian" target="_blank">Vitória Lilian</a> para o <a href="https://www.cursoemvideo.com" target="_blank">CursoemVideo</a>
         </p>
     </footer>
 </body>
