--- a/exercicios/ex023-tabelas/tabela002.html
+++ b/exercicios/ex023-tabelas/tabela002.html
@@ -13,6 +13,7 @@
         table {
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
 
         caption {
@@ -33,6 +34,20 @@
             color: white;
         }
 
+        thead > tr > th {
+            position: sticky;
+            top: -1px;
+            background-color: gray;
+        }
+
+        tbody > tr:nth-child(odd) {
+            background-color: white;
+        }
+
+        tbody > tr:nth-child(even) {
+            background-color: lightgray;
+        }
+
         td.num {
             text-align: right;
         }
@@ -48,7 +63,7 @@
             <tr>
                 <th scope="col" style="width: 10px;">Posição</th>
                 <th scope="col">Estado</th>
-                <th scope="col" style="width: 50px;">População</th>
+                <th scope="col" style="width: 100px;">População</th>
             </tr>
         </thead>
         <tbody>
@@ -199,7 +214,15 @@
                 <td scope="row">Total de Habitantes</td>
                 <td class="num"><strong>207 883 699</strong></td>
             </tr>
-        </tfoot>
+        </tfoot> 
     </table>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus maxime quisquam tempore sequi odio dolor ut sit animi quibusdam perferendis vitae possimus eveniet, nihil maiores natus quam laboriosam magni! Est. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur cupiditate, animi consequatur quibusdam a voluptates molestias. Enim laborum sunt ratione illum. Recusandae, consequatur? Pariatur mollitia quidem illo similique a non. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis accusantium, non harum esse delectus perferendis cum doloremque, iusto, ullam libero expedita nisi quidem necessitatibus consequatur animi vel odio ut eligendi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque exercitationem veniam rem quasi aliquid non deleniti, laboriosam hic sit molestiae dolorum rerum asperiores mollitia nihil harum quam pariatur ipsam quisquam?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus maxime quisquam tempore sequi odio dolor ut sit animi quibusdam perferendis vitae possimus eveniet, nihil maiores natus quam laboriosam magni! Est. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur cupiditate, animi consequatur quibusdam a voluptates molestias. Enim laborum sunt ratione illum. Recusandae, consequatur? Pariatur mollitia quidem illo similique a non. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis accusantium, non harum esse delectus perferendis cum doloremque, iusto, ullam libero expedita nisi quidem necessitatibus consequatur animi vel odio ut eligendi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque exercitationem veniam rem quasi aliquid non deleniti, laboriosam hic sit molestiae dolorum rerum asperiores mollitia nihil harum quam pariatur ipsam quisquam?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus maxime quisquam tempore sequi odio dolor ut sit animi quibusdam perferendis vitae possimus eveniet, nihil maiores natus quam laboriosam magni! Est. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur cupiditate, animi consequatur quibusdam a voluptates molestias. Enim laborum sunt ratione illum. Recusandae, consequatur? Pariatur mollitia quidem illo similique a non. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis accusantium, non harum esse delectus perferendis cum doloremque, iusto, ullam libero expedita nisi quidem necessitatibus consequatur animi vel odio ut eligendi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque exercitationem veniam rem quasi aliquid non deleniti, laboriosam hic sit molestiae dolorum rerum asperiores mollitia nihil harum quam pariatur ipsam quisquam?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus maxime quisquam tempore sequi odio dolor ut sit animi quibusdam perferendis vitae possimus eveniet, nihil maiores natus quam laboriosam magni! Est. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur cupiditate, animi consequatur quibusdam a voluptates molestias. Enim laborum sunt ratione illum. Recusandae, consequatur? Pariatur mollitia quidem illo similique a non. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis accusantium, non harum esse delectus perferendis cum doloremque, iusto, ullam libero expedita nisi quidem necessitatibus consequatur animi vel odio ut eligendi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque exercitationem veniam rem quasi aliquid non deleniti, laboriosam hic sit molestiae dolorum rerum asperiores mollitia nihil harum quam pariatur ipsam quisquam?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus maxime quisquam tempore sequi odio dolor ut sit animi quibusdam perferendis vitae possimus eveniet, nihil maiores natus quam laboriosam magni! Est. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur cupiditate, animi consequatur quibusdam a voluptates molestias. Enim laborum sunt ratione illum. Recusandae, consequatur? Pariatur mollitia quidem illo similique a non. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis accusantium, non harum esse delectus perferendis cum doloremque, iusto, ullam libero expedita nisi quidem necessitatibus consequatur animi vel odio ut eligendi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque exercitationem veniam rem quasi aliquid non deleniti, laboriosam hic sit molestiae dolorum rerum asperiores mollitia nihil harum quam pariatur ipsam quisquam?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus maxime quisquam tempore sequi odio dolor ut sit animi quibusdam perferendis vitae possimus eveniet, nihil maiores natus quam laboriosam magni! Est. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur cupiditate, animi consequatur quibusdam a voluptates molestias. Enim laborum sunt ratione illum. Recusandae, consequatur? Pariatur mollitia quidem illo similique a non. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis accusantium, non harum esse delectus perferendis cum doloremque, iusto, ullam libero expedita nisi quidem necessitatibus consequatur animi vel odio ut eligendi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque exercitationem veniam rem quasi aliquid non deleniti, laboriosam hic sit molestiae dolorum rerum asperiores mollitia nihil harum quam pariatur ipsam quisquam?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus maxime quisquam tempore sequi odio dolor ut sit animi quibusdam perferendis vitae possimus eveniet, nihil maiores natus quam laboriosam magni! Est. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur cupiditate, animi consequatur quibusdam a voluptates molestias. Enim laborum sunt ratione illum. Recusandae, consequatur? Pariatur mollitia quidem illo similique a non. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis accusantium, non harum esse delectus perferendis cum doloremque, iusto, ullam libero expedita nisi quidem necessitatibus consequatur animi vel odio ut eligendi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque exercitationem veniam rem quasi aliquid non deleniti, laboriosam hic sit molestiae dolorum rerum asperiores mollitia nihil harum quam pariatur ipsam quisquam?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus maxime quisquam tempore sequi odio dolor ut sit animi quibusdam perferendis vitae possimus eveniet, nihil maiores natus quam laboriosam magni! Est. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur cupiditate, animi consequatur quibusdam a voluptates molestias. Enim laborum sunt ratione illum. Recusandae, consequatur? Pariatur mollitia quidem illo similique a non. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis accusantium, non harum esse delectus perferendis cum doloremque, iusto, ullam libero expedita nisi quidem necessitatibus consequatur animi vel odio ut eligendi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque exercitationem veniam rem quasi aliquid non deleniti, laboriosam hic sit molestiae dolorum rerum asperiores mollitia nihil harum quam pariatur ipsam quisquam?</p>
 </body>
 </html>
