atualizei exercicio iframe003

--- a/exercicios/ex024-iframe/iframe003.html
+++ b/exercicios/ex024-iframe/iframe003.html
@@ -29,8 +29,9 @@
 
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati nesciunt cupiditate rerum vel nobis reiciendis aperiam blanditiis quia dicta dolores aut illo accusamus voluptatibus, quidem pariatur facilis ipsam similique minima? Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae nemo praesentium at obcaecati molestiae amet expedita quasi cupiditate commodi, dolor, velit distinctio dolore! Ut laboriosam totam commodi quia quibusdam molestias.</p>
 
-    <iframe id="tela" name="frame" src="">
-        <p>Infelizmente o seu navegador não é compatível com iframe.</p>
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha umas das opções acima.</h1><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati amet sed est fugiat maxime qui atque aut velit repellendus, officia dolores sit? Ullam consectetur quos nulla modi non quidem ea?</p><img src='imagens/mascote.png'>">
+        "
+    <p>Infelizmente o seu navegador não é compatível com iframe.</p>
     </iframe>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis minima hic officia asperiores ratione illum, ducimus magnam quisquam ex assumenda quasi eligendi repudiandae aut recusandae a laborum architecto aspernatur veritatis? Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero sed fugit cumque beatae corporis, nam, neque exercitationem esse nobis odio quas voluptate quisquam aperiam laborum eum nemo, distinctio maxime tempore.</p>
