--- a/exercicios/ex025-formularios/form003.html
+++ b/exercicios/ex025-formularios/form003.html
@@ -15,7 +15,19 @@
         </p>
         <p>
             <label for="media">Média:</label>
-            <input type="number" name="media" id="imedia" min="0" max="10" placeholder="0 a 10" step="">
+            <input type="number" name="media" id="imedia" min="0" max="10" placeholder="0 a 10" step="0.5" value="5" required>
+        </p>
+        <p>
+            <label for="imes">Período Letivo</label>
+            <input type="month" name="mes" id="imes" value="2023-04">
+        </p>
+        <p>
+            <label for="idia">Dia da Prova</label>
+            <input type="date" name="dia" id="idia" value="2023-04-14">
+        </p>
+        <p>
+            <label for="ihora">Horário da Prova</label>
+            <input type="time" name="hora" id="hora">
         </p>
         <p>
             <input type="submit" value="Enviar">
