--- a/exercicios/ex025-formularios/form003.html
+++ b/exercicios/ex025-formularios/form003.html
@@ -10,12 +10,12 @@
     <h1>Teste de Formulário</h1>
     <form action="cadastro.php" method="get" autocomplete="on">
         <p>
-            <label for="inome">Nome:</label>
+            <label for="inome">Nome</label>
             <input type="text" name="nome" id="inome" required maxlength="35" placeholder="Nome Completo" autocomplete="name">
         </p>
         <p>
-            <label for="media">Média:</label>
-            <input type="number" name="media" id="imedia" min="0" max="10" placeholder="0 a 10" step="0.5" value="5" required>
+            <label for="imedia">Média</label>
+            <input type="number" name="media" id="imedia" min="0" max="10" placeholder="0 a 10" step="0.1" value="5" required>
         </p>
         <p>
             <label for="imes">Período Letivo</label>
